@@ -48,6 +48,9 @@ extern z80_bit menu_filesel_posicionar_archivo;
 extern char menu_filesel_posicionar_archivo_nombre[];
 extern void file_utils_info_file(char *archivo);
 
+extern int menu_util_file_is_compressed(char *filename);
+extern int menu_filesel_uncompress (char *archivo,char *tmpdir);
+
 extern int menu_filesel_expand(char *archivo,char *tmpdir,char *sufijo_carpeta);
 
 extern int menu_filesel_readdir_mmc_image(const char *directorio, struct dirent ***namelist,
